--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>ProMemória</title>
+		<title>ProMemÃ³ria</title>
 		<link rel="stylesheet" href="css/style.controle.css" />
 		<link rel="stylesheet" href="css/style.jogo.css" />
 		<link rel="stylesheet" href="css/style.sobre.css" />
-		
+		 <meta charset="UTF-8">
+		<script src="js/jquery-1.6.min.js"></script>
+
 		<meta http-equiv="X-UA-Compatible" content="IE=9">
-		
+
 	</head>
 	<body>
 		<div id="game"></div>
-		
-	<script src="js/script.audio.js"></script>
-	<script src="js/script.controle.js"></script>
-	<script src="js/script.jogo.js"></script>
-	<script src="js/script.sobre.js"></script>
-	<script src="js/script.sobreTexto.js"></script>
-	<script src="js/jquery-1.6.min.js"></script>
+
+		<script src="js/script.audio.js"></script>
+		<script src="js/script.controle.js"></script>
+		<script src="js/script.jogo.js"></script>
+		<script src="js/script.sobre.js"></script>
+		<script src="js/script.sobreTexto.js"></script>
 	</body>
-	
+
 </html>
