--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="css/style.controle.css" />
 		<link rel="stylesheet" href="css/style.jogo.css" />
 		<link rel="stylesheet" href="css/style.sobre.css" />
+		<link rel="stylesheet" href="css/output.css" />
 		 <meta charset="UTF-8">
 		<script src="js/jquery-1.6.min.js"></script>
 
@@ -22,3 +23,4 @@
 	</body>
 
 </html>
+
