Replace <title> tag

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>ProMemória</title>
+		<title>Memória</title>
 		<link rel="stylesheet" href="css/style.controle.css" />
 		<link rel="stylesheet" href="css/style.jogo.css" />
 		<link rel="stylesheet" href="css/style.sobre.css" />
